syntax = "proto3";

option go_package = "github.com/snipeart007/doc-chain/bootstrap/data_service";

import "google/protobuf/timestamp.proto";

package data_service;

message DocumentID {
    string id = 1;
}

message Document {
    string id = 1;
    bytes data = 2;
    google.protobuf.Timestamp timestamp = 3;
    string block = 4;
}

message CreateDocumentArgs {
    bytes data = 1;
}

message MineAttempt {
    string hash = 1;
    int32 nonce = 2;
}

message MineResult {
    bool success = 1;
    bool continue = 2;
    bytes value = 3;
}

service DataService {
    rpc GetDocument (DocumentID) returns (Document);

    rpc InsertDocument (CreateDocumentArgs) returns (DocumentID);

    rpc StartMining (stream MineAttempt) returns (stream MineResult);
}
